
@startuml
entity Categoria {
  * id : int
  * nombre : String
}

entity Empresa {
  * id : int
  * nombre : String
  * descripcion : String
  * ubicacion : String
}

entity Usuario {
  * username : String
  * password : String
  * nombre : String
  * apellidos : String
  * email : String
  * fechaRegistro : Date
  * enabled : int
  * roles : String
}

entity Vacante {
  * idVacante : int
  * nombre : String
  * descripcion : String
  * ubicacion : String
  * salario : double
  * estatus : String
  * fechaPublicacion : Date
}

entity Solicitud {
  * id : int
  * comentario : String
  * fechaSolicitud : Date
  * estado : int
}

Categoria ||--o{ Vacante : tiene
Empresa ||--o{ Vacante : publica
Usuario ||--o{ Solicitud : realiza
Vacante ||--o{ Solicitud : recibe
@enduml
